@@ -193,7 +193,7 @@ int CheckChunkEncoding(HI_SESSION *session, const u_char *start, const u_char *e
                      && (iInspectMode == HI_SI_CLIENT_MODE)
                      && (session->server_conf->chunk_length < iChunkLen) )
                 {
-                    SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LARGE_CHUNK);
+                    hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LARGE_CHUNK);
                 }
 
                 if (session->server_conf->small_chunk_length.size != 0)
@@ -227,7 +227,7 @@ int CheckChunkEncoding(HI_SESSION *session, const u_char *start, const u_char *e
                         {
                             if ( !alerted )
                             {
-                                SnortEventqAdd(gid, sid);
+                                hi_set_event(gid, sid);
                                 alerted = true;
                             }
                             *chunk_count = 0;
@@ -302,7 +302,7 @@ int CheckChunkEncoding(HI_SESSION *session, const u_char *start, const u_char *e
                             (*ptr != '\n') && (*ptr != '\r')
                             && ((ptr + 1) < end) && (*(ptr + 1) != '\n') )
                     {
-                        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_CHUNK_SIZE_MISMATCH);
+                        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_CHUNK_SIZE_MISMATCH);
                     }
                 }
                 else
@@ -373,7 +373,7 @@ int CheckChunkEncoding(HI_SESSION *session, const u_char *start, const u_char *e
                          && (iInspectMode == HI_SI_CLIENT_MODE)
                          && (session->server_conf->chunk_length < iChunkLen) )
                     {
-                        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LARGE_CHUNK);
+                        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LARGE_CHUNK);
                     }
 
                     iCheckChunk = 0;
@@ -465,7 +465,7 @@ static inline const u_char *FindPipelineReq(HI_SESSION *session,
             if ( session->server_conf->max_hdr_len &&
                 (p - offset) >= session->server_conf->max_hdr_len )
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
             }
 
             p++;
@@ -497,7 +497,7 @@ static inline const u_char *FindPipelineReq(HI_SESSION *session,
     if ( session->server_conf->max_hdr_len &&
         (p - start) >= session->server_conf->max_hdr_len )
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
     }
 
     return NULL;
@@ -662,7 +662,7 @@ int NextNonWhiteSpace(HI_SESSION *session, const u_char *start,
         {
             if(ServerConf->apache_whitespace.on)
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_APACHE_WS);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_APACHE_WS);
             }
             (*ptr)++;
             continue;
@@ -963,7 +963,7 @@ int find_non_rfc_delimiter(
     */
     if(ServerConf->iis_delimiter.on)
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_IIS_DELIMITER);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_IIS_DELIMITER);
 
         uri_ptr->delimiter = *ptr;
 
@@ -1057,7 +1057,7 @@ static inline int CheckLongDir(HI_SESSION *session, URI_PTR *uri_ptr,
 
         if ( iDirLen > session->server_conf->long_dir )
         {
-            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_OVERSIZE_DIR);
+            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_OVERSIZE_DIR);
         }
     }
 
@@ -1801,7 +1801,7 @@ const u_char *extract_http_xff(HI_SESSION *session, const u_char *p, const u_cha
 
     if( (hdrs_args->true_clnt_xff & HDRS_BOTH) == HDRS_BOTH)
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_BOTH_TRUEIP_XFF_HDRS);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_BOTH_TRUEIP_XFF_HDRS);
     }
 
     SkipBlankSpace(start,end,&p);
@@ -1821,7 +1821,7 @@ const u_char *extract_http_xff(HI_SESSION *session, const u_char *p, const u_cha
         if ( session->server_conf->max_spaces &&
             num_spaces >= session->server_conf->max_spaces )
         {
-            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
+            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
         }
 
         p = p + unfold_size;
@@ -1861,14 +1861,14 @@ const u_char *extract_http_xff(HI_SESSION *session, const u_char *p, const u_cha
                     {
                         if((status != SFIP_ARG_ERR) && (status !=SFIP_ALLOC_ERR))
                         {
-                            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_INVALID_TRUEIP);
+                            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_INVALID_TRUEIP);
                             return p;
                         }
                     }
                 }
                 else if((status != SFIP_ARG_ERR) && (status !=SFIP_ALLOC_ERR))
                 {
-                    SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_INVALID_TRUEIP);
+                    hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_INVALID_TRUEIP);
                     free(ipAddr);
                     return p;
                 }
@@ -1880,7 +1880,7 @@ const u_char *extract_http_xff(HI_SESSION *session, const u_char *p, const u_cha
                     sfip_free(*true_ip);
                     *true_ip = tmp;
 
-                    SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_TRUEIP_IN_SESSION);
+                    hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_TRUEIP_IN_SESSION);
                 }
                 else
                     sfip_free(tmp);
@@ -1930,7 +1930,7 @@ const u_char *extract_http_hostname(HI_SESSION *session, const u_char *p, const 
         if ( session->server_conf->max_spaces &&
             num_spaces >= session->server_conf->max_spaces )
         {
-            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
+            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
         }
         p = p + unfold_size;
 
@@ -1943,7 +1943,7 @@ const u_char *extract_http_hostname(HI_SESSION *session, const u_char *p, const 
 
         if((end_ptr - start_ptr) >= MAX_HOSTNAME)
         {
-            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HOSTNAME);
+            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HOSTNAME);
         }
 
         iRet = HTTP_CopyExtraDataTosession((uint8_t *)start_ptr, (end_ptr - start_ptr), COPY_HOSTNAME, hsd->log_state);
@@ -1971,7 +1971,7 @@ const u_char *extract_http_content_length(HI_SESSION *session,
     int space_present = 0;
     if (header_ptr->content_len.cont_len_start)
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_CONTLEN);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_CONTLEN);
         header_ptr->header.uri_end = p;
         header_ptr->content_len.len = 0;
         return p;
@@ -2017,7 +2017,7 @@ const u_char *extract_http_content_length(HI_SESSION *session,
                                 if ( session->server_conf->max_spaces &&
                                     num_spaces >= session->server_conf->max_spaces )
                                 {
-                                    SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
+                                    hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
                                 }
                                 if ( isdigit((int)*p))
                                     break;
@@ -2225,7 +2225,7 @@ static inline const u_char *extractHeaderFieldValues(HI_SESSION *session,
             /* Alert when there are multiple host headers in one request */
             if(hdrs_args->hst_name_hdr)
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_HOST_HDRS);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_MULTIPLE_HOST_HDRS);
                 return p;
             }
             else
@@ -2360,7 +2360,7 @@ static inline const u_char *hi_client_extract_header(
                         if ( session->server_conf->max_spaces &&
                             num_spaces >= session->server_conf->max_spaces )
                         {
-                            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
+                            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
                         }
                     }
                     break;
@@ -2383,7 +2383,7 @@ static inline const u_char *hi_client_extract_header(
     }
     else
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_UNESCAPED_SPACE_URI);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_UNESCAPED_SPACE_URI);
         if(p < end)
         {
             crlf = (u_char *)SnortStrnStr((const char *)p, end - p, "\n");
@@ -2413,13 +2413,13 @@ static inline const u_char *hi_client_extract_header(
             if ( session->server_conf->max_hdr_len &&
                 (p - offset) >= session->server_conf->max_hdr_len )
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
             }
 
             if (session->server_conf->max_headers &&
                 (header_count > session->server_conf->max_headers))
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_MAX_HEADERS);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_MAX_HEADERS);
             }
 
             p++;
@@ -2429,7 +2429,7 @@ static inline const u_char *hi_client_extract_header(
             if ( session->server_conf->max_spaces &&
                 num_spaces >= session->server_conf->max_spaces )
             {
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_EXCEEDS_SPACES);
             }
 
             offset = (u_char*)p;
@@ -2489,7 +2489,7 @@ static inline const u_char *hi_client_extract_header(
     if ( session->server_conf->max_hdr_len &&
         (p - start) >= session->server_conf->max_hdr_len )
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
     }
 
     header_ptr->header.uri_end = p;
@@ -2699,7 +2699,7 @@ int StatelessInspection(Packet *p, HI_SESSION *session, HttpsessionData *hsd, in
 
         if(iRet == -1 || (CmdConf == NULL))
         {
-            SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_UNKNOWN_METHOD);
+            hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_UNKNOWN_METHOD);
             Client->request.method = HI_UNKNOWN_METHOD;
         }
     }
@@ -2711,7 +2711,7 @@ int StatelessInspection(Packet *p, HI_SESSION *session, HttpsessionData *hsd, in
              * so we know we're looking for a method and not guessing that we're in
              * the body or somewhere else because we found a non-ascii character */
             if ( !stream_ins )
-                SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_UNKNOWN_METHOD);
+                hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_UNKNOWN_METHOD);
             Client->request.method = HI_UNKNOWN_METHOD;
         }
     }
@@ -2733,7 +2733,7 @@ int StatelessInspection(Packet *p, HI_SESSION *session, HttpsessionData *hsd, in
     if ( iRet == URI_END && ServerConf->max_hdr_len &&
          ((uri_ptr.uri_end - uri_ptr.uri) >= ServerConf->max_hdr_len) )
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_LONG_HDR);
     }
 
     if(iRet == URI_END &&
@@ -2906,7 +2906,7 @@ int StatelessInspection(Packet *p, HI_SESSION *session, HttpsessionData *hsd, in
     if(uri_ptr.proxy && session->global_conf->proxy_alert &&
        (!ServerConf->allow_proxy && !ClientConf->allow_proxy))
     {
-        SnortEventqAdd(GID_HTTP_CLIENT, HI_CLIENT_PROXY_USE);
+        hi_set_event(GID_HTTP_CLIENT, HI_CLIENT_PROXY_USE);
     }
 
     return HI_SUCCESS;
