@@ -31,6 +31,7 @@
 -- latest from Josh
 -- initial /* comments */ for text rules (needs to ignore \")
 -- latest from Josh
+-- added hi event squelch
 
 126
 -- pulled latest from tom
